<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">


    <ImageView
        android:id="@+id/avatar_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_person_24"
        />

    <LinearLayout
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp">

        <TextView
            android:id="@+id/transaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type" />

        <TextView
            android:id="@+id/transaction_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note" />

        <TextView
            android:id="@+id/date_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

    </LinearLayout>

    <TextView
        android:id="@+id/amount_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="120dp"
        android:text="@string/amount"
        android:textAlignment="viewEnd" />


</LinearLayout>